Sat Jan 15 22:27:56 CET 2000  Marc Lehmann <pcg@goof.com>

        * libgimp/gimpenv.c, libgimp/color_selector.h,
        libgimp/color_display.h: Change license to LGPL (see the log
        message for approval of the various authors). If an author was
        left out please contact me!!

Fri Jan 14 14:46:27 CET 2000  Marc Lehmann <pcg@goof.com>

        * app/menus.c: Removed Perl-specific translations and moved
        them to the perl .pot-file. Gurgl, Ratz: That localises the
        translation, but also requires more places to be updated once i18n
        works as I would expect it.
        * plug-ins/script-fu/interp_slib.c: portability fixes (64-bit
        problems).

Sat Jan 15 19:11:49 CET 2000  Sven Neumann <sven@gimp.org>

	* gimprc.5.in: fixed a typo
	
	* app/preferences_dialog.c: one more change in the spirit of my
	last commit

2000-01-16  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* plug-ins/common/waves.c
	* plug-ins/common/whirlpinch.c
	* plug-ins/common/wind.c
	* plug-ins/common/wmf.c
	* plug-ins/pagecurl/pagecurl.c
	* plug-ins/pagecurl/Makefile.am
	* po-plug-ins/POTFILES.in: added gettext support.

	* app/text_tool.c: i18n fix.

2000-01-15 Garry R. Osgood <gosgood@idt.net>

	* app/layers_dialog.c
	* app/global_edit.c
        layers_dialog.c:layers_dialog_flush() now has
        only one entry and exit point, so that 
        suspend_gimage_notify is properly maintained.
        Has bearing on (but likely does not fully solve)
        bugs #4031, #4914, and #4927. (Layers and 
	Channel Dialog with sticky layers. See 
        http://idt.net/~gosgood/gimp-patch/patch04.html
        and bug reports.
        global_edit.c: edit_paste_as_new() now checks
        if it has a valid layer from layer_new_from_tiles()

2000-01-15  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpwidgets.[ch]: added a float adjustment callback.

	* plug-ins/common/bumpmap.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/destripe.c